terraform/apps/grafana/manifest/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${PREFIX}-reporting
  namespace: "${PREFIX}-engine"
spec:
  parentRefs:
    - name: ${PREFIX}-common-gateway
      namespace: "istio-system"
  hostnames:
    - "dash.${BASE_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
